[Fixes #97] Restyle asides on mobile

--- a/client/scss/media.scss
+++ b/client/scss/media.scss
@@ -40,4 +40,13 @@
 	content-row main article .author-image {
 		display: none;
 	}
+
+	content-row main article aside {
+		position: static;
+		transform: none;
+		width: auto;
+		margin-bottom: 1em;
+		background: transparent;
+		border-bottom: none;
+	}
 }
